Vergleich fertig Intro weitergemacht bis unconsulted mauscripts edition 70% fertig restliche 30% überarbeitet  für Jürgen

--- a/bindu.bib
+++ b/bindu.bib
@@ -1,4 +1,133 @@
-﻿@inbook{kaviraj,
+﻿@book{ytbe,
+   title={Binduyogaḥ with Bhāṣaṭīkā},
+   editor={Miśra, Jvālāprasāda},
+   note={Printed Edition},
+   year={1905},
+   address={Mumbai},
+   %shorthand={E},
+   keywords={printed},
+}
+
+@article{riegger2018,
+  author = {Manfred Riegger},
+  title = {Interreligiöser Dialog im Angesicht von Heterogenität: Differenzhermeneutische Grundlegung und Perspektiven für religiöse Bildung},
+  journal = {Münchner Theologische Zeitschrift (MThZ)},
+  volume = {69},
+  year = {2018},
+  address = {München},
+  publisher= {EOS Verlag}, 
+  pages = {218--240},
+}
+
+@codex{ytbp,
+   title={Tatvabiṃduyoga},
+   note={Ms. No. 664, Paper, Devanāgarī},
+   address={Bhandarkar Oriental Research Institute, Pune (BORI)},
+   year={Saṃvat 1867},
+   %shorthand={P},
+   keywords={codex},
+}
+
+@codex{ytbb,
+   title={Tatvabiṃduyoga},
+   note={Ms. No. D 4587, Paper, Devanāgarī, incomplete},
+   address={Bodleian Library, Oxford},
+   year={n.d.},
+   %shorthand={B},
+   keywords={codex},
+}
+
+@codex{ytbl,
+   title={Tatvabiṃduyoga},
+   note={Ms. No. LRL 5876, Paper, Devanāgarī},
+   address={Lalchand Research Library, DAV College, Chandigarh},
+   year={n.d.},
+   %shorthand={L},
+   keywords={codex},
+}
+
+@codex{ytbn1,
+   title={Tatvayogabiṃdu},
+   note={Ms. No. NGMPP B 38-31, Paper, Devanāgarī},
+   address={National Archives of Nepal, Kathmandu},
+   year={Nepal Saṃvat 837},
+   %shorthand={N\textlowerscript{1}},
+   keywords={codex},
+}
+
+@codex{ytbn2,
+   title={Tatvayogabiṃdu},
+   note={Ms. No. NGMPP B 38-35 / A 1327-14, Paper, Devanāgarī},
+   address={National Archives of Nepal, Kathmandu},
+   year={n.d.},
+   %shorthand={N\textlowerscript{2}},
+   keywords={codex},
+}
+
+@codex{ytbd1,
+   title={Tatvayogabiṃdu},
+   note={Ms. No. IGNCA 30019, Paper, Devanāgarī},
+   address={Indira Gandhi National Centre for the Arts, Delhi},
+   year={Saṃvat 1841},
+   %shorthand={D\textlowerscript{1}},
+   keywords={codex},
+}
+
+@codex{ytbd2,
+   title={Yogasaṃgraha},
+   note={Ms. No. IGNCA 30020, Paper, Devanāgarī, incomplete},
+   address={Indira Gandhi National Centre for the Arts, Delhi},
+   %shorthand={D\textlowerscript{2}},
+   keywords={codex},
+}
+
+@codex{ytbu1,
+   title={Tatvayogaviduḥ},
+   %author={Rāmacandraparamahaṃsa},
+   note={Ms. No. SORI 1574, Paper, Devanāgarī},
+   address={Scindia Oriental Research Institute, Ujjain},
+   %shorthand={U\textlowerscript{1}},
+   keywords={codex},
+}
+
+@codex{ytbu2,
+   title={Tattvabinduyogaḥ},
+   %author={Rāmacandraparamahaṃsa},
+   note={Ms. No. SORI 6082, Paper, Devanāgarī},
+   address={Scindia Oriental Research Institute, Ujjain},
+   year={Śake 1805},
+   %shorthand={U\textlowerscript{2}},
+   keywords={codex},
+}
+
+@codex{stb1,
+   title={Siddhāntatattvabindu},
+   %author={Devendra},
+   note={Ms. No. NGMPP, MA 905-3, Paper, Newari},
+   address={National Archives Kathmandu},
+   %shorthand={S\textlowerscript{1}},
+   keywords={codex},
+}
+
+@codex{stb2,
+   title={Siddhāntatattvabindu},
+   %author={Devendra},
+   note={Ms. No. NGMPP, E 1189-13, Paper, Devanāgarī},
+   address={National Archives Kathmandu},
+   %shorthand={S\textlowerscript{2}},
+   keywords={codex},
+}
+
+@misc{srivastava2017lal,
+  author       = {Raju Srivastava},
+  title        = {Lal Chand Research Indological Research Center Manuscript Catalog - DAV College Chandigarh},
+  year         = {2017},
+  publisher    = {Indological Research Center, DAV College Chandigarh},
+  howpublished = {\url{https://archive.org/details/LalChandResearchIndologicalResearchCenterManuscriptCatalogDAVCollegeChandigarh}},
+  keywords ={seclit}, 
+}
+
+@inbook{kaviraj,
   author      = {Kavirāj, Gopīnāth},
   title       = {The system of cakras according to Gorakṣanātha},
   editor      = {Sastri, Gaurinath},
@@ -11,6 +140,36 @@
   address     = {Varanasi},
   keywords    = {seclit},
 }
+
+@book{pureyoga,
+  title={Pure Yoga: A translation from the Sanskrit into English of the tāntric work, The Gheraṇḍasaṃhitā, with a guiding commentary by Yogī Praṇavānanda},
+  editor={Rodriguez, Tony and Ram, Dr. Kanshi},
+  year={1992},
+  publisher={Motilal Banarsidass},
+  address={Delhi},
+  keywords={seclit},
+  notes={reprint 1997, 2000},
+}
+
+@book{sahai1972,
+  author = {Sahai, M.},
+  title = {Yoga Kośa: Yoga Terms Explained with Reference to Context},
+  year = {1972},
+  publisher = {Kaivalyadhama S.M.Y.M. Samiti},
+  location = {Indien}
+}
+
+@book{hathayogasamhita1921,
+  title = {Haṭhayogasaṃhitā},
+  subtitle={bhāṣānuvāda sahita},
+  publisher = {Śrībhāratadharma Mahāmaṇḍala Pradhāna Kāryālaya},
+  year = {1921},
+  address = {Kāśī},
+  author = {Agnihotrī, Puṇḍita Nārāyaṇarāva},
+  note = {Published by Śrīviśvanātha Annapūrṇā Dānabhaṇḍāra, printed by Śrībhāratadharma Pres, VS 1978},
+  keywords={seclit},
+}
+
 
 @thesis{haas2018vom,
   author    = {Dominik Haas},
@@ -64,6 +223,66 @@ keywords={seclit},
   address   = {Wien},
   year      = {1983},
  keywords    = {seclit},
+}
+
+@book{newcataloguscatalogorum8,
+  author = {V. Raghavan and S. P. Narang and D. C. Bhattacharya},
+  title = {New Catalogus Catalogorum: An Alphabetical Register of Sanskrit and Allied Works and Authors},
+  volume = {8},
+  year = {2007},
+  publisher = {Madras University},
+  location = {Chennai},
+   keywords    = {seclit},
+}
+
+@book{baroda1950,
+  author    = {Raghavan Nambiar Siromani},
+  title     = {An Alphabetical List of Manuscripts in the Oriental Institute Baroda, Vol. II},
+  year      = {1950},
+  publisher = {Oriental Institute},
+  address   = {Baroda},
+  note      = {Compiled by Nyayabhusana, Catalogue Assistant, Oriental Institute, Baroda},
+   keywords    = {seclit},
+}
+
+@book{nagpur1926,
+  author    = {Rai Bahadur Hiralal},
+  title     = {Catalogue of Sanskrit and Prakrit Manuscripts in the Central Provinces and Berar},
+  year      = {1926},
+  publisher = {Government Press},
+  address   = {Nagpur},
+  note      = {Published under the orders of the Government of the Central Provinces and Berar},
+   keywords    = {seclit},
+}
+
+@book{newcataloguscatalogorum23,
+  author = {V. Raghavan and S. P. Narang and D. C. Bhattacharya},
+  title = {New Catalogus Catalogorum: An Alphabetical Register of Sanskrit and Allied Works and Authors},
+  volume = {23},
+  year = {2007},
+  publisher = {Madras University},
+  location = {Chennai},
+   keywords    = {seclit},
+}
+
+@book{hall1859,
+  author = {Fitzedward Hall},
+  title = {A Contribution towards an Index to the Bibliography of the Indian Philosophical Systems},
+  year = {1859},
+  publisher = {C. B. Lewis, Baptist Mission Press},
+  address = {Calcutta},
+   keywords    = {seclit},
+}
+
+@book{calcutta1900,
+  author       = {H. Sastri},
+  title        = {A Descriptive Catalogue of Sanskrit Manuscripts of The Calcutta Sanskrit College, Vol.3},
+  year         = {1900},
+  publisher    = {J.N. Banerjee & Son, Banerjee Press},
+  address      = {Calcutta},
+  language     = {Sanskrit},
+  note         = {Book Source: Digital Library of India Item 2015.313482. Accessed on 2015-08-10. Available at: \url{http://www.new.dli.ernet.in/handle/2015/313482}. Scanning Centre: Banasthali University. Source Library: Bharatiya Vidya Bhavan Library, Mumbai. Digital Republisher: Digital Library Of India},
+   keywords    = {seclit},
 }
 
 @incollection{birch2020,
@@ -547,7 +766,7 @@ keywords={seclit},
 }
 
 @book{kriyayogasturgess2015,
-title={The Supreme Art and Science of Rāja & Kriyā Yoga},
+title={The Supreme Art and Science of Rāja and Kriyā Yoga},
 subtitle={The Ultimate Path to Self-Realisation}, 
 author={Sturgess, Stephan},
 year={2015},
@@ -830,6 +1049,7 @@ address= {London and New York},
 	year = {1997},
 	pages= {185-200},
 	publisher= {Klimkeit Hg.},
+	  keywords={seclit},
 }
 
 
@@ -842,6 +1062,7 @@ address= {London and New York},
 	volume= {12},
 	publisher= {Brill},
 	address= {Leiden},
+	  keywords={seclit},
 }
 
 @article{smith1982,
@@ -851,6 +1072,7 @@ address= {London and New York},
 	journal= {Imagining Religion - From Babylon to Jonestown},
 	publisher= {The University of Chicago Press},
 	address= {Chicago and London},
+	  keywords={seclit},
 }
 
 @article{holdrege1994,
@@ -861,13 +1083,18 @@ address= {London and New York},
 	publisher= {di Breitschneider},
 	pages= {803-812},
 	address= {Rom},
-}
+	keywords= {seclit},
+	}
+
 @book{hermes1997,
 	author= {Holzhausen, Jens (Übers.)},
 	title= {Das Corpus Hermeticum Deutsch: Übersetzung, Darstellung und Kommentierung in drei Teilen / im Auftr. der Heidelberger Wissenschaften bearb. und hrsg. von Carsten Colpe und Jens Holzhausen. Teil 1. Die griechischen Traktate und der lateinische ,Asclepius' /übers. und eingeleitet von Jens Holzhausen.},
 	year= {1997},
 	publisher= {Friedrich Frommann VerlaG - Günther Holzboog},
 	address= {Stuttgart-Bad Cannstatt},
+		keywords= {seclit},
+	}
+
 }
 
 @book{ebeling2005,
@@ -1321,7 +1548,6 @@ publisher={Kaivalyadhama},
 address={Lonavla},
 keywords={seclit},
 }
-
 
 @article{birch2019,
  title={The Amaraughaprabodha: New Evidence on the Manuscript Transmission of an Early Work on Haṭha- and Rājayoga},
@@ -2006,7 +2232,7 @@ keywords={printsource},
 }
 
 @book{singh2005paratrisika,
-  author = {Singh, Jaideva and Swami Lakshman Joo and Bettina Baumer},
+  author = {Singh, Jaideva and Swami Lakshman-Joo and Bettina Bäumer},
   title = {Paratrisika Vivarana by Abhinavagupta: The Secret of Tantric Mysticism},
   year = {2005},
   address= {New Delhi},
@@ -2324,6 +2550,20 @@ keywords={printsource},
    keywords={printsource},
 }
 
+@book{MallinsonGheranda,
+  author    = {Mallinson, James},
+  title     = {The Gheranda Samhita: The Original Sanskrit and An English Translation},
+  publisher = {YogaVidya.com},
+  year      = {2004},
+  address   = {Woodstock, NY},
+  keywords  = {printsource},
+}
+
+@book{gherandasamhita,
+   title={Gheraṇḍasaṃhitā},
+   note={See The Gheranda Samhita: The Original Sanskrit and An English Translation},
+   keywords={printsource},
+}
 
 @Misc{shivasam,
    note={Śivasaṃhita: \cite{mallinson2007}},
