--- a/intro.bib
+++ b/intro.bib
@@ -1,4 +1,122 @@
-﻿@inbook{kaviraj,
+﻿@book{ytbe,
+   title={Binduyogaḥ with Bhāṣaṭīkā},
+   editor={Miśra, Jvālāprasāda},
+   note={Printed Edition},
+   year={1905},
+   address={Mumbai},
+   %shorthand={E},
+   keywords={printed},
+}
+
+@codex{ytbp,
+   title={Tatvabiṃduyoga},
+   note={Ms. No. 664, Paper, Devanāgarī},
+   address={Bhandarkar Oriental Research Institute, Pune (BORI)},
+   year={Saṃvat 1867},
+   %shorthand={P},
+   keywords={codex},
+}
+
+@codex{ytbb,
+   title={Tatvabiṃduyoga},
+   note={Ms. No. D 4587, Paper, Devanāgarī, incomplete},
+   address={Bodleian Library, Oxford},
+   %year={n.d.},
+   %shorthand={B},
+   keywords={codex},
+}
+
+@codex{ytbl,
+   title={Tatvabiṃduyoga},
+   note={Ms. No. LRL 5876, Paper, Devanāgarī},
+   address={Lalchand Research Library, DAV College, Chandigarh},
+   %year={n.d.},
+   %shorthand={L},
+   keywords={codex},
+}
+
+@codex{ytbn1,
+   title={Tatvayogabiṃdu},
+   note={Ms. No. NGMPP B 38-31, Paper, Devanāgarī},
+   address={National Archives of Nepal, Kathmandu},
+   year={Nepal Saṃvat 837},
+   %shorthand={N\textlowerscript{1}},
+   keywords={codex},
+}
+
+@codex{ytbn2,
+   title={Tatvayogabiṃdu},
+   note={Ms. No. NGMPP B 38-35 / A 1327-14, Paper, Devanāgarī},
+   address={National Archives of Nepal, Kathmandu},
+   %year={n.d.},
+   %shorthand={N\textlowerscript{2}},
+   keywords={codex},
+}
+
+@codex{ytbd,
+   title={Tatvayogabiṃdu},
+   note={Ms. No. IGNCA 30019, Paper, Devanāgarī},
+   address={Indira Gandhi National Centre for the Arts, Delhi},
+   year={Saṃvat 1841},
+   %shorthand={D\textlowerscript{1}},
+   keywords={codex},
+}
+
+@codex{ytbys,
+   title={Yogasaṃgraha},
+   note={Ms. No. IGNCA 30020, Paper, Devanāgarī, incomplete},
+   address={Indira Gandhi National Centre for the Arts, Delhi},
+   %shorthand={D\textlowerscript{2}},
+   keywords={codex},
+}
+
+@codex{ytbu1,
+   title={Tatvayogaviduḥ},
+   %author={Rāmacandraparamahaṃsa},
+   note={Ms. No. SORI 1574, Paper, Devanāgarī},
+   address={Scindia Oriental Research Institute, Ujjain},
+   %shorthand={U\textlowerscript{1}},
+   keywords={codex},
+}
+
+@codex{ytbu2,
+   title={Tattvabinduyogaḥ},
+   %author={Rāmacandraparamahaṃsa},
+   note={Ms. No. SORI 6082, Paper, Devanāgarī},
+   address={Scindia Oriental Research Institute, Ujjain},
+   year={Śake 1805},
+   %shorthand={U\textlowerscript{2}},
+   keywords={codex},
+}
+
+@codex{stb1,
+   title={Siddhāntatattvabindu},
+   %author={Devendra},
+   note={Ms. No. NGMPP, MA 905-3, Paper, Newari},
+   address={National Archives Kathmandu},
+   %shorthand={S\textlowerscript{1}},
+   keywords={codex},
+}
+
+@codex{stb2,
+   title={Siddhāntatattvabindu},
+   %author={Devendra},
+   note={Ms. No. NGMPP, E 1189-13, Paper, Devanāgarī},
+   address={National Archives Kathmandu},
+   %shorthand={S\textlowerscript{2}},
+   keywords={codex},
+}
+
+@misc{srivastava2017lal,
+  author       = {Raju Srivastava},
+  title        = {Lalchand Research Indological Research Center Manuscript Catalog - DAV College Chandigarh},
+  year         = {2017},
+  publisher    = {Indological Research Center, DAV College Chandigarh},
+  howpublished = {\url{https://archive.org/details/LalChandResearchIndologicalResearchCenterManuscriptCatalogDAVCollegeChandigarh}},
+  keywords ={seclit}, 
+}
+
+@inbook{kaviraj,
   author      = {Kavirāj, Gopīnāth},
   title       = {The system of cakras according to Gorakṣanātha},
   editor      = {Sastri, Gaurinath},
@@ -11,6 +129,36 @@
   address     = {Varanasi},
   keywords    = {seclit},
 }
+
+@book{pureyoga,
+  title={Pure Yoga: A translation from the Sanskrit into English of the tāntric work, The Gheraṇḍasaṃhitā, with a guiding commentary by Yogī Praṇavānanda},
+  editor={Rodriguez, Tony and Ram, Dr. Kanshi},
+  year={1992},
+  publisher={Motilal Banarsidass},
+  address={Delhi},
+  keywords={seclit},
+  notes={reprint 1997, 2000},
+}
+
+@book{sahai1972,
+  author = {Sahai, M.},
+  title = {Yoga Kośa: Yoga Terms Explained with Reference to Context},
+  year = {1972},
+  publisher = {Kaivalyadhama S.M.Y.M. Samiti},
+  location = {Indien}
+}
+
+@book{hathayogasamhita1921,
+  title = {Haṭhayogasaṃhitā},
+  subtitle={bhāṣānuvāda sahita},
+  publisher = {Śrībhāratadharma Mahāmaṇḍala Pradhāna Kāryālaya},
+  year = {1921},
+  address = {Kāśī},
+  author = {Agnihotrī, Puṇḍita Nārāyaṇarāva},
+  note = {Published by Śrīviśvanātha Annapūrṇā Dānabhaṇḍāra, printed by Śrībhāratadharma Pres, VS 1978},
+  keywords={seclit},
+}
+
 
 @thesis{haas2018vom,
   author    = {Dominik Haas},
@@ -547,7 +695,7 @@ keywords={seclit},
 }
 
 @book{kriyayogasturgess2015,
-title={The Supreme Art and Science of Rāja & Kriyā Yoga},
+title={The Supreme Art and Science of Rāja and Kriyā Yoga},
 subtitle={The Ultimate Path to Self-Realisation}, 
 author={Sturgess, Stephan},
 year={2015},
@@ -830,6 +978,7 @@ address= {London and New York},
 	year = {1997},
 	pages= {185-200},
 	publisher= {Klimkeit Hg.},
+	  keywords={seclit},
 }
 
 
@@ -842,6 +991,7 @@ address= {London and New York},
 	volume= {12},
 	publisher= {Brill},
 	address= {Leiden},
+	  keywords={seclit},
 }
 
 @article{smith1982,
@@ -851,6 +1001,7 @@ address= {London and New York},
 	journal= {Imagining Religion - From Babylon to Jonestown},
 	publisher= {The University of Chicago Press},
 	address= {Chicago and London},
+	  keywords={seclit},
 }
 
 @article{holdrege1994,
@@ -861,13 +1012,18 @@ address= {London and New York},
 	publisher= {di Breitschneider},
 	pages= {803-812},
 	address= {Rom},
-}
+	keywords= {seclit},
+	}
+
 @book{hermes1997,
 	author= {Holzhausen, Jens (Übers.)},
 	title= {Das Corpus Hermeticum Deutsch: Übersetzung, Darstellung und Kommentierung in drei Teilen / im Auftr. der Heidelberger Wissenschaften bearb. und hrsg. von Carsten Colpe und Jens Holzhausen. Teil 1. Die griechischen Traktate und der lateinische ,Asclepius' /übers. und eingeleitet von Jens Holzhausen.},
 	year= {1997},
 	publisher= {Friedrich Frommann VerlaG - Günther Holzboog},
 	address= {Stuttgart-Bad Cannstatt},
+		keywords= {seclit},
+	}
+
 }
 
 @book{ebeling2005,
@@ -1321,7 +1477,6 @@ publisher={Kaivalyadhama},
 address={Lonavla},
 keywords={seclit},
 }
-
 
 @article{birch2019,
  title={The Amaraughaprabodha: New Evidence on the Manuscript Transmission of an Early Work on Haṭha- and Rājayoga},
@@ -2235,6 +2390,16 @@ keywords={printsource},
    keywords={critEd},
 }
 
+@phdthesis{kropf2005,
+  author       = {Marianna Kropf},
+  title        = {Rituelle Traditionen der Planetengottheiten (Navagraha) im Kathmandutal. Strukturen – Praktiken – Weltbilder},
+  school       = {Universität Heidelberg},
+  year         = {2005},
+  note         = {Dissertation},
+  url          = {https://fid4sa-repository.ub.uni-heidelberg.de/24/2/Text_Kropf.pdf},
+  keywords     = {seclit}, 
+}
+
 @book{mallinson2007,
    title={Śivasaṃhitā},
    subtitle={The Shiva Samhita},
@@ -2314,6 +2479,20 @@ keywords={printsource},
    keywords={printsource},
 }
 
+@book{MallinsonGheranda,
+  author    = {Mallinson, James},
+  title     = {The Gheranda Samhita: The Original Sanskrit and An English Translation},
+  publisher = {YogaVidya.com},
+  year      = {2004},
+  address   = {Woodstock, NY},
+  keywords  = {printsource},
+}
+
+@book{gherandasamhita,
+   title={Gheraṇḍasaṃhitā},
+   note={See The Gheranda Samhita: The Original Sanskrit and An English Translation},
+   keywords={printsource},
+}
 
 @Misc{shivasam,
    note={Śivasaṃhita: \cite{mallinson2007}},
