--- a/preamble.tex
+++ b/preamble.tex
@@ -8,7 +8,9 @@
 \checkandfixthelayout[lines]
 \linespread{1.16}
 \flushbottom
-
+%%%chapternumbering
+%\setcounter{secnumdepth}{2}
+% Set the depth of numbering
 %%% Hyphenation settings
 \usepackage[htt]{hyphenat}
 \hyphenation{he-lio-trope opos-sum}
@@ -313,9 +315,10 @@ surname=Liersch]
 %Useful shorthands:
 %\DeclareShorthand{codd}{codd.}{V,I,R,H}
 %\DeclareShorthand{edd}{edd.}{Lit,Erm,Sm}
-\DeclareShorthand{egoscr}{em.}{ego}
+\DeclareShorthand{egoscr}{\begin{otherlanguage}{english}em.\end{otherlanguage}}{ego}
 \DeclareShorthand{egoscrconj}{conj.}{ego}
 \DeclareShorthand{sellmerconj}{SELLMER conj.}{ego}
+\DeclareShorthand{sellmerem}{SELLMER em.}{ego}
 \DeclareShorthand{birchconj}{BIRCH conj.}{ego}
 \DeclareShorthand{mallinsonconj}{MALLINSON conj.}{ego}
 \DeclareShorthand{birchem}{BIRCH em.}{ego}
@@ -456,4 +459,11 @@ surname=Liersch]
 %%% itemize linksbündig!
 
 \renewenvironment{itemize}{\begin{list}{$\bullet$} {\leftmargin1.5em \labelsep1em
-\rightmargin0cm \parsep0.5ex plus0.2ex minus0.1ex \itemsep0ex plus0.2ex}}{\end{list}}
+      \rightmargin0cm \parsep0.5ex plus0.2ex minus0.1ex \itemsep0ex plus0.2ex}}{\end{list}}
+
+%%% counter Figuren und Tabellen kapitelübergreifend
+
+
+%%%%
+
+\usepackage{lettrine}
