more intro stuff

--- a/intro.bib
+++ b/intro.bib
@@ -5,7 +5,18 @@
    year={1905},
    address={Mumbai},
    %shorthand={E},
-   keywords={printed},
+   keywords={printsource},
+}
+
+@article{riegger2018,
+  author = {Manfred Riegger},
+  title = {Interreligiöser Dialog im Angesicht von Heterogenität: Differenzhermeneutische Grundlegung und Perspektiven für religiöse Bildung},
+  journal = {Münchner Theologische Zeitschrift (MThZ)},
+  volume = {69},
+  year = {2018},
+  address = {München},
+  publisher= {EOS Verlag}, 
+  pages = {218--240},
 }
 
 @codex{ytbp,
@@ -21,7 +32,7 @@
    title={Tatvabiṃduyoga},
    note={Ms. No. D 4587, Paper, Devanāgarī, incomplete},
    address={Bodleian Library, Oxford},
-   %year={n.d.},
+   year={n.d.},
    %shorthand={B},
    keywords={codex},
 }
@@ -30,7 +41,7 @@
    title={Tatvabiṃduyoga},
    note={Ms. No. LRL 5876, Paper, Devanāgarī},
    address={Lalchand Research Library, DAV College, Chandigarh},
-   %year={n.d.},
+   year={n.d.},
    %shorthand={L},
    keywords={codex},
 }
@@ -48,12 +59,12 @@
    title={Tatvayogabiṃdu},
    note={Ms. No. NGMPP B 38-35 / A 1327-14, Paper, Devanāgarī},
    address={National Archives of Nepal, Kathmandu},
-   %year={n.d.},
+   year={n.d.},
    %shorthand={N\textlowerscript{2}},
    keywords={codex},
 }
 
-@codex{ytbd,
+@codex{ytbd1,
    title={Tatvayogabiṃdu},
    note={Ms. No. IGNCA 30019, Paper, Devanāgarī},
    address={Indira Gandhi National Centre for the Arts, Delhi},
@@ -62,7 +73,7 @@
    keywords={codex},
 }
 
-@codex{ytbys,
+@codex{ytbd2,
    title={Yogasaṃgraha},
    note={Ms. No. IGNCA 30020, Paper, Devanāgarī, incomplete},
    address={Indira Gandhi National Centre for the Arts, Delhi},
@@ -109,7 +120,7 @@
 
 @misc{srivastava2017lal,
   author       = {Raju Srivastava},
-  title        = {Lalchand Research Indological Research Center Manuscript Catalog - DAV College Chandigarh},
+  title        = {Lal Chand Research Indological Research Center Manuscript Catalog - DAV College Chandigarh},
   year         = {2017},
   publisher    = {Indological Research Center, DAV College Chandigarh},
   howpublished = {\url{https://archive.org/details/LalChandResearchIndologicalResearchCenterManuscriptCatalogDAVCollegeChandigarh}},
@@ -155,7 +166,7 @@
   year = {1921},
   address = {Kāśī},
   author = {Agnihotrī, Puṇḍita Nārāyaṇarāva},
-  note = {Published by Śrīviśvanātha Annapūrṇā Dānabhaṇḍāra, printed by Śrībhāratadharma Pres, VS 1978},
+  note = {Published by Śrīviśvanātha Annapūrṇā Dānabhaṇḍāra, printsource by Śrībhāratadharma Pres, VS 1978},
   keywords={seclit},
 }
 
@@ -213,6 +224,127 @@ keywords={seclit},
   year      = {1983},
  keywords    = {seclit},
 }
+
+@book{newcataloguscatalogorum8,
+  author = {V. Raghavan and S. P. Narang and D. C. Bhattacharya},
+  title = {New Catalogus Catalogorum: An Alphabetical Register of Sanskrit and Allied Works and Authors},
+  volume = {8},
+  year = {2007},
+  publisher = {Madras University},
+  location = {Chennai},
+   keywords    = {seclit},
+}
+
+@book{newcataloguscatalogorum9,
+  author = {V. Raghavan and S. P. Narang and D. C. Bhattacharya},
+  title = {New Catalogus Catalogorum: An Alphabetical Register of Sanskrit and Allied Works and Authors},
+  volume = {9},
+  year = {2007},
+  publisher = {Madras University},
+  location = {Chennai},
+   keywords    = {seclit},
+}
+
+
+@book{newcataloguscatalogorum10,
+  author = {V. Raghavan and S. P. Narang and D. C. Bhattacharya},
+  title = {New Catalogus Catalogorum: An Alphabetical Register of Sanskrit and Allied Works and Authors},
+  volume = {10},
+  year = {2007},
+  publisher = {Madras University},
+  location = {Chennai},
+   keywords    = {seclit},
+}
+
+@book{newcataloguscatalogorum15,
+  author = {V. Raghavan and S. P. Narang and D. C. Bhattacharya},
+  title = {New Catalogus Catalogorum: An Alphabetical Register of Sanskrit and Allied Works and Authors},
+  volume = {15},
+  year = {2007},
+  publisher = {Madras University},
+  location = {Chennai},
+   keywords    = {seclit},
+}
+
+@book{newcataloguscatalogorum22,
+  author = {V. Raghavan and S. P. Narang and D. C. Bhattacharya},
+  title = {New Catalogus Catalogorum: An Alphabetical Register of Sanskrit and Allied Works and Authors},
+  volume = {22},
+  year = {2007},
+  publisher = {Madras University},
+  location = {Chennai},
+   keywords    = {seclit},
+}
+
+
+@book{baroda1950,
+  author    = {Raghavan Nambiar Siromani},
+  title     = {An Alphabetical List of Manuscripts in the Oriental Institute Baroda, Vol. II},
+  year      = {1950},
+  publisher = {Oriental Institute},
+  address   = {Baroda},
+  note      = {Compiled by Nyayabhusana, Catalogue Assistant, Oriental Institute, Baroda},
+  keywords  = {seclit},
+}
+
+@book{nagpur1957,
+  title     = {Catalogue Of Sanskrit Manuscripts In The Nagpur University Library},
+  author    = {Karambelkar, V.W. (ed.)},
+  year      = {1957},
+  publisher = {Nagpur University Library, Nagpur},
+  address   = {Nagpur},
+ keywords    = {seclit},
+}
+
+@book{nagpur1926,
+  author    = {Rai Bahadur Hiralal},
+  title     = {Catalogue of Sanskrit and Prakrit Manuscripts in the Central Provinces and Berar},
+  year      = {1926},
+  publisher = {Government Press},
+  address   = {Nagpur},
+  note      = {Published under the orders of the Government of the Central Provinces and Berar},
+   keywords    = {seclit},
+}
+
+@book{newcataloguscatalogorum23,
+  author = {V. Raghavan and S. P. Narang and D. C. Bhattacharya},
+  title = {New Catalogus Catalogorum: An Alphabetical Register of Sanskrit and Allied Works and Authors},
+  volume = {23},
+  year = {2007},
+  publisher = {Madras University},
+  location = {Chennai},
+   keywords    = {seclit},
+}
+
+@book{hall1859,
+  author = {Fitzedward Hall},
+  title = {A Contribution towards an Index to the Bibliography of the Indian Philosophical Systems},
+  year = {1859},
+  publisher = {C. B. Lewis, Baptist Mission Press},
+  address = {Calcutta},
+   keywords    = {seclit},
+}
+
+@book{calcutta1900,
+  author       = {H. Sastri},
+  title        = {A Descriptive Catalogue of Sanskrit Manuscripts of The Calcutta Sanskrit College, Vol.3},
+  year         = {1900},
+  publisher    = {J.N. Banerjee and Son, Banerjee Press},
+  address      = {Calcutta},
+  language     = {Sanskrit},
+  note         = {Book Source: Digital Library of India Item 2015.313482. Accessed on 2015-08-10. Available at: \url{http://www.new.dli.ernet.in/handle/2015/313482}. Scanning Centre: Banasthali University. Source Library: Bharatiya Vidya Bhavan Library, Mumbai. Digital Republisher: Digital Library Of India},
+   keywords    = {seclit},
+}
+
+@book{lucknow2021,
+  title     = {A Catalogue Of Manuscripts In Akhil Bharatiya Sanskrit Parishad},
+  editor    ={Shri K. A. Subramania Iyer and Shri G. C. Sinha and Dr. J. P. Sinha.},
+  year      = {2021},
+  publisher = {Muthulakshmi Research Academy, Akhil Bharatiya Sanskrit Parishad}, address   = {Lucknow}, 
+  note      = {Compiled by Shri Daulat Ram Yuyal},
+  keywords  = {seclit},
+}
+
 
 @incollection{birch2020,
   author    = {Birch, Jason},
@@ -280,7 +412,7 @@ keywirds={seclit},
   year = {11th or 12th century},
   publisher = {Laṃvapurīya - "mumbai saṃskṛta" mudraṇayantrālaye mudritaṃ},
   address = {Mumbai},
-  keywords={printed},
+  keywords={printsource},
 }
 
 @inproceedings{balcerowicz2011dharmakirti,
@@ -335,7 +467,7 @@ author={Kriyananda, Goswami},
 year={1993},
 publisher={The Temple of Kriya Yoga},
 address={Chicago},
-keywords={printed},
+keywords={printsource},
 }
 
 @book{hariharananda1989,
@@ -355,7 +487,7 @@ keywords={seclit},
  note={Original year of publication 1938}, 
  publisher={Motilal Banarsidass}, 
  address={Delhi},
- keywords={printed},
+ keywords={printsource},
 }
 
 @incollection{ganesan2016saiva,
@@ -404,7 +536,7 @@ keywords={seclit},
  series={Publications de l’Institut français d’Indologie; Publications du Départment d’Indologie.}, 
  volume={25},
  address={Pondichéry},
- keywords={printed},
+ keywords={printsource},
 }
 
 @book{samgitaratna, 
@@ -415,7 +547,7 @@ keywords={seclit},
  publisher={Adyar Library and Research Centre, Theosophical Pub. House},
  address={Chennai},
  note={in Sanskrit - 2nd ed.},
- keywords={printed},
+ keywords={printsource},
 }
 
 @book{merutantra, 
@@ -435,7 +567,7 @@ volume={29},
 series={Pandit Nathuram Premi Research Series},  
 publisher={Hindi Granth Karyalay},
 address={Mumbai}, 
-keywords={printed}, 
+keywords={printsource}, 
 } 
 
 
@@ -466,7 +598,7 @@ editor={Bhatt, G.H.},
 year={2001}, 
 publisher={Oriental Institute Vadodara}, 
 address={Baroda}, 
-keywords={printed},
+keywords={printsource},
 }
 
 
@@ -479,7 +611,7 @@ series={The Vrajajivan Indological Studies},
 volume={36},
 publisher={Chaukhamba Sanskrit Pratishthan},
 address={Delhi}, 
-keywords={printed},
+keywords={printsource},
 }
 
 
@@ -669,7 +801,7 @@ address={Lonavla},
   year         = {1899},
   publisher    = {Oxford University Press},
   address      = {Oxford},
-  note         = {Reprinted lithographically Oxford 1956, 1960, 1964},
+  note         = {Reprintsource lithographically Oxford 1956, 1960, 1964},
   keywords     = {seclit},
 }
 
@@ -813,7 +945,7 @@ keywords={seclit},
   year      = {1993},
   publisher = {Star Publications},
   address   = {New Delhi},
-  keywords = {printed}
+  keywords = {printsource}
 }
 
 @book{uddhavagita2007,
@@ -825,7 +957,7 @@ keywords={seclit},
   year         = {2007},
   publisher    = {Touchstone Media},
   address      = {Kolkata},
-  keywords     = {printed},
+  keywords     = {printsource},
 }
 
 @book{shivanandakriya1982,
@@ -1316,7 +1448,7 @@ address={The Hague},
 
 @book{yogasutra,
   title={Pātañjalayogaśāstra},
-  subtitle={Yoga Pahilosophy of Patañjali},
+  subtitle={Yoga Philosophy of Patañjali},
   author={Hariharānanda Āraṇya},
   editor={Mukerji, P.N.},
   year={1983},
@@ -1456,7 +1588,7 @@ keywords={printsource},
 @book{satcakraniru,
    title={Ṣaṭcakranirūpaṇa},
    note={see The Serpent Power}, 
-   keywords={printed},
+   keywords={printsource},
 }
 
 
@@ -1517,6 +1649,16 @@ keywords={seclit}
  publisher={Deutsche Morgenländische Gesellschaft, Harrasowitz Verlag}, 
  address={Wiesbaden},
  keywords={seclit},
+}
+
+@book{moskopaya12,
+  title     = {Mokṣopāya - Textedition, Teil 1. Das erste und zweite Buch: Vairāgyaprakaraṇa, Mumukṣuvyahāraprakaraṇa},
+  subtitle  = {Kritische Edition},
+  author    = {Anonymus Casmiriensis},
+  editor    = {Susanne Krause-Stinner},
+  year      = {2014},
+  publisher = {Harrassowitz Verlag},
+  keywords  = {printsource},
 }
 
 @book{manasollasa,
@@ -1722,7 +1864,7 @@ Sound},
 
 @book{amaraugha2024,
  title= {Amaraugha},
- subtitle={The Amaraugha and Amaraughaprabodha of Gorakṣanātha}, 
+ subtitle={The Amaraugha and Amaraughaprabodha of Gorakṣanātha - The Genesis of Haṭha- and Rājayoga}, 
  editor= {Birch, Jason},
  year= {2024},
   publisher={École française d’Extrême-Orient},
@@ -2090,6 +2232,18 @@ keywords={printsource},
   keywords={seclit},
 }
 
+@incollection{goodall2016tattvas,
+  title={How the Tattvas of Tantric Śaivism Came to Be 36: The Evidence of the \emph{Niśvāsatattvasaṃhitā}},
+  author={Goodall, Dominic},
+  booktitle={Tantric Studies: Fruits of a Franco-German Project on Early Tantra},
+  editor={Goodall, Dominic and Isaacson, Harunaga},
+  pages={77--112},
+  year={2016},
+  publisher={Institut Français de Pondichéry / Ecole française d’Extrême-Orient},
+  address={Pondicherry},
+  keywords={seclit},
+}
+
 @book{goodall1998,
   title={Bhaṭṭa Rāmakaṇṇtha's Commentary on the Kiraṇatantra - Vol. I: Chapters 1-6. Critical edition and annotated translation.},
   editor= {Goodall, Dominic}, 
@@ -2161,7 +2315,7 @@ keywords={printsource},
 }
 
 @book{singh2005paratrisika,
-  author = {Singh, Jaideva and Swami Lakshman Joo and Bettina Baumer},
+  author = {Singh, Jaideva and Swami Lakshman-Joo and Bettina Bäumer},
   title = {Paratrisika Vivarana by Abhinavagupta: The Secret of Tantric Mysticism},
   year = {2005},
   address= {New Delhi},
@@ -3377,7 +3531,7 @@ subtitle={The Niśvāsatattvasaṃhitā: The Earliest Surviving Śaiva Tantra},
   year = {1938},
   publisher = {The Adyar Library},
   address={Chennai}, 
-  keywords={printed}, 
+  keywords={printsource}, 
 }
 
 @book{brhadaranyaka,
@@ -3409,6 +3563,13 @@ subtitle={The Niśvāsatattvasaṃhitā: The Earliest Surviving Śaiva Tantra},
    title={Kaṭha-Upaniṣad},
    note={see The Early Upanishads},
    pages={372-402}, 
+   keywords={printsource},
+}
+
+@book{yogatattvopanishad,
+   title={Yogatattvopaniṣad},
+   note={see Yoga Upaniṣads},
+   pages={363-388}, 
    keywords={printsource},
 }
 
