--- a/bindu.bib
+++ b/bindu.bib
@@ -5,7 +5,7 @@
    year={1905},
    address={Mumbai},
    %shorthand={E},
-   keywords={printed},
+   keywords={printsource},
 }
 
 @article{riegger2018,
@@ -166,7 +166,7 @@
   year = {1921},
   address = {Kāśī},
   author = {Agnihotrī, Puṇḍita Nārāyaṇarāva},
-  note = {Published by Śrīviśvanātha Annapūrṇā Dānabhaṇḍāra, printed by Śrībhāratadharma Pres, VS 1978},
+  note = {Published by Śrīviśvanātha Annapūrṇā Dānabhaṇḍāra, printsource by Śrībhāratadharma Pres, VS 1978},
   keywords={seclit},
 }
 
@@ -235,6 +235,48 @@ keywords={seclit},
    keywords    = {seclit},
 }
 
+@book{newcataloguscatalogorum9,
+  author = {V. Raghavan and S. P. Narang and D. C. Bhattacharya},
+  title = {New Catalogus Catalogorum: An Alphabetical Register of Sanskrit and Allied Works and Authors},
+  volume = {9},
+  year = {2007},
+  publisher = {Madras University},
+  location = {Chennai},
+   keywords    = {seclit},
+}
+
+
+@book{newcataloguscatalogorum10,
+  author = {V. Raghavan and S. P. Narang and D. C. Bhattacharya},
+  title = {New Catalogus Catalogorum: An Alphabetical Register of Sanskrit and Allied Works and Authors},
+  volume = {10},
+  year = {2007},
+  publisher = {Madras University},
+  location = {Chennai},
+   keywords    = {seclit},
+}
+
+@book{newcataloguscatalogorum15,
+  author = {V. Raghavan and S. P. Narang and D. C. Bhattacharya},
+  title = {New Catalogus Catalogorum: An Alphabetical Register of Sanskrit and Allied Works and Authors},
+  volume = {15},
+  year = {2007},
+  publisher = {Madras University},
+  location = {Chennai},
+   keywords    = {seclit},
+}
+
+@book{newcataloguscatalogorum22,
+  author = {V. Raghavan and S. P. Narang and D. C. Bhattacharya},
+  title = {New Catalogus Catalogorum: An Alphabetical Register of Sanskrit and Allied Works and Authors},
+  volume = {22},
+  year = {2007},
+  publisher = {Madras University},
+  location = {Chennai},
+   keywords    = {seclit},
+}
+
+
 @book{baroda1950,
   author    = {Raghavan Nambiar Siromani},
   title     = {An Alphabetical List of Manuscripts in the Oriental Institute Baroda, Vol. II},
@@ -242,7 +284,16 @@ keywords={seclit},
   publisher = {Oriental Institute},
   address   = {Baroda},
   note      = {Compiled by Nyayabhusana, Catalogue Assistant, Oriental Institute, Baroda},
-   keywords    = {seclit},
+  keywords  = {seclit},
+}
+
+@book{nagpur1957,
+  title     = {Catalogue Of Sanskrit Manuscripts In The Nagpur University Library},
+  author    = {Karambelkar, V.W. (ed.)},
+  year      = {1957},
+  publisher = {Nagpur University Library, Nagpur},
+  address   = {Nagpur},
+ keywords    = {seclit},
 }
 
 @book{nagpur1926,
@@ -278,12 +329,22 @@ keywords={seclit},
   author       = {H. Sastri},
   title        = {A Descriptive Catalogue of Sanskrit Manuscripts of The Calcutta Sanskrit College, Vol.3},
   year         = {1900},
-  publisher    = {J.N. Banerjee & Son, Banerjee Press},
+  publisher    = {J.N. Banerjee and Son, Banerjee Press},
   address      = {Calcutta},
   language     = {Sanskrit},
   note         = {Book Source: Digital Library of India Item 2015.313482. Accessed on 2015-08-10. Available at: \url{http://www.new.dli.ernet.in/handle/2015/313482}. Scanning Centre: Banasthali University. Source Library: Bharatiya Vidya Bhavan Library, Mumbai. Digital Republisher: Digital Library Of India},
    keywords    = {seclit},
 }
+
+@book{lucknow2021,
+  title     = {A Catalogue Of Manuscripts In Akhil Bharatiya Sanskrit Parishad},
+  editor    ={Shri K. A. Subramania Iyer and Shri G. C. Sinha and Dr. J. P. Sinha.},
+  year      = {2021},
+  publisher = {Muthulakshmi Research Academy, Akhil Bharatiya Sanskrit Parishad}, address   = {Lucknow}, 
+  note      = {Compiled by Shri Daulat Ram Yuyal},
+  keywords  = {seclit},
+}
+
 
 @incollection{birch2020,
   author    = {Birch, Jason},
@@ -351,7 +412,7 @@ keywirds={seclit},
   year = {11th or 12th century},
   publisher = {Laṃvapurīya - "mumbai saṃskṛta" mudraṇayantrālaye mudritaṃ},
   address = {Mumbai},
-  keywords={printed},
+  keywords={printsource},
 }
 
 @inproceedings{balcerowicz2011dharmakirti,
@@ -406,7 +467,7 @@ author={Kriyananda, Goswami},
 year={1993},
 publisher={The Temple of Kriya Yoga},
 address={Chicago},
-keywords={printed},
+keywords={printsource},
 }
 
 @book{hariharananda1989,
@@ -426,7 +487,7 @@ keywords={seclit},
  note={Original year of publication 1938}, 
  publisher={Motilal Banarsidass}, 
  address={Delhi},
- keywords={printed},
+ keywords={printsource},
 }
 
 @incollection{ganesan2016saiva,
@@ -475,7 +536,7 @@ keywords={seclit},
  series={Publications de l’Institut français d’Indologie; Publications du Départment d’Indologie.}, 
  volume={25},
  address={Pondichéry},
- keywords={printed},
+ keywords={printsource},
 }
 
 @book{samgitaratna, 
@@ -486,7 +547,7 @@ keywords={seclit},
  publisher={Adyar Library and Research Centre, Theosophical Pub. House},
  address={Chennai},
  note={in Sanskrit - 2nd ed.},
- keywords={printed},
+ keywords={printsource},
 }
 
 @book{merutantra, 
@@ -506,7 +567,7 @@ volume={29},
 series={Pandit Nathuram Premi Research Series},  
 publisher={Hindi Granth Karyalay},
 address={Mumbai}, 
-keywords={printed}, 
+keywords={printsource}, 
 } 
 
 
@@ -537,7 +598,7 @@ editor={Bhatt, G.H.},
 year={2001}, 
 publisher={Oriental Institute Vadodara}, 
 address={Baroda}, 
-keywords={printed},
+keywords={printsource},
 }
 
 
@@ -550,7 +611,7 @@ series={The Vrajajivan Indological Studies},
 volume={36},
 publisher={Chaukhamba Sanskrit Pratishthan},
 address={Delhi}, 
-keywords={printed},
+keywords={printsource},
 }
 
 
@@ -740,7 +801,7 @@ address={Lonavla},
   year         = {1899},
   publisher    = {Oxford University Press},
   address      = {Oxford},
-  note         = {Reprinted lithographically Oxford 1956, 1960, 1964},
+  note         = {Reprintsource lithographically Oxford 1956, 1960, 1964},
   keywords     = {seclit},
 }
 
@@ -884,7 +945,7 @@ keywords={seclit},
   year      = {1993},
   publisher = {Star Publications},
   address   = {New Delhi},
-  keywords = {printed}
+  keywords = {printsource}
 }
 
 @book{uddhavagita2007,
@@ -896,7 +957,7 @@ keywords={seclit},
   year         = {2007},
   publisher    = {Touchstone Media},
   address      = {Kolkata},
-  keywords     = {printed},
+  keywords     = {printsource},
 }
 
 @book{shivanandakriya1982,
@@ -1387,7 +1448,7 @@ address={The Hague},
 
 @book{yogasutra,
   title={Pātañjalayogaśāstra},
-  subtitle={Yoga Pahilosophy of Patañjali},
+  subtitle={Yoga Philosophy of Patañjali},
   author={Hariharānanda Āraṇya},
   editor={Mukerji, P.N.},
   year={1983},
@@ -1527,7 +1588,7 @@ keywords={printsource},
 @book{satcakraniru,
    title={Ṣaṭcakranirūpaṇa},
    note={see The Serpent Power}, 
-   keywords={printed},
+   keywords={printsource},
 }
 
 
@@ -1588,6 +1649,16 @@ keywords={seclit}
  publisher={Deutsche Morgenländische Gesellschaft, Harrasowitz Verlag}, 
  address={Wiesbaden},
  keywords={seclit},
+}
+
+@book{moskopaya12,
+  title     = {Mokṣopāya - Textedition, Teil 1. Das erste und zweite Buch: Vairāgyaprakaraṇa, Mumukṣuvyahāraprakaraṇa},
+  subtitle  = {Kritische Edition},
+  author    = {Anonymus Casmiriensis},
+  editor    = {Susanne Krause-Stinner},
+  year      = {2014},
+  publisher = {Harrassowitz Verlag},
+  keywords  = {printsource},
 }
 
 @book{manasollasa,
@@ -1793,7 +1864,7 @@ Sound},
 
 @book{amaraugha2024,
  title= {Amaraugha},
- subtitle={The Amaraugha and Amaraughaprabodha of Gorakṣanātha}, 
+ subtitle={The Amaraugha and Amaraughaprabodha of Gorakṣanātha - The Genesis of Haṭha- and Rājayoga}, 
  editor= {Birch, Jason},
  year= {2024},
   publisher={École française d’Extrême-Orient},
@@ -2155,6 +2226,18 @@ keywords={printsource},
 @book{goodall2016,
   title={Tantric Studies: Fruits of a Franco-German Project on Early Tantra},
   author={Goodall, Dominic and Isaacson, Harunaga},
+  year={2016},
+  publisher={Institut Français de Pondichéry / Ecole française d’Extrême-Orient},
+  address={Pondicherry},
+  keywords={seclit},
+}
+
+@incollection{goodall2016tattvas,
+  title={How the Tattvas of Tantric Śaivism Came to Be 36: The Evidence of the \emph{Niśvāsatattvasaṃhitā}},
+  author={Goodall, Dominic},
+  booktitle={Tantric Studies: Fruits of a Franco-German Project on Early Tantra},
+  editor={Goodall, Dominic and Isaacson, Harunaga},
+  pages={77--112},
   year={2016},
   publisher={Institut Français de Pondichéry / Ecole française d’Extrême-Orient},
   address={Pondicherry},
@@ -3448,7 +3531,7 @@ subtitle={The Niśvāsatattvasaṃhitā: The Earliest Surviving Śaiva Tantra},
   year = {1938},
   publisher = {The Adyar Library},
   address={Chennai}, 
-  keywords={printed}, 
+  keywords={printsource}, 
 }
 
 @book{brhadaranyaka,
@@ -3480,6 +3563,13 @@ subtitle={The Niśvāsatattvasaṃhitā: The Earliest Surviving Śaiva Tantra},
    title={Kaṭha-Upaniṣad},
    note={see The Early Upanishads},
    pages={372-402}, 
+   keywords={printsource},
+}
+
+@book{yogatattvopanishad,
+   title={Yogatattvopaniṣad},
+   note={see Yoga Upaniṣads},
+   pages={363-388}, 
    keywords={printsource},
 }
 
