added intro description of texts until spp

--- a/bindu.bib
+++ b/bindu.bib
@@ -1,4 +1,25 @@
-﻿@book{ytbe,
+﻿@book{goraksasiddhantasamgraha1973,
+  title        = {Gorakṣasiddhāntasaṃgraha},
+  editor       = {Janārdana Śāstrī Pāṇḍeya},
+  year         = 1973,
+  series       = {Saraswatībhavana-Granthamālā},
+  volume       = 110,
+  publisher    = {Varanaseya Sanskrit Vishvavidyalaya},
+  address      = {Varanasi},
+  keywords     = {printsource},
+}
+
+
+@book{bouy1994,
+  author       = {Bouy, Christian},
+  title        = {Les Nātha-yogin et les Upaniṣads: étude d’histoire de la littérature hindoue},
+  year         = {1994},
+  publisher    = {Collège de France, Institut de civilisation indienne : Diffusion de Boccard},
+  address      = {Paris},
+  keywords     = {seclit}, 
+}
+
+@book{ytbe,
    title={Binduyogaḥ with Bhāṣaṭīkā},
    editor={Miśra, Jvālāprasāda},
    note={Printed Edition},
@@ -1841,6 +1862,15 @@ Sound},
   publisher={The University of Chicago Press},
   address={Chicago},
   keywords={seclit},
+}
+
+@book{white2003,
+  author       = {White, David Gordon},
+  title        = {Kiss of the Yogini: “Tantric Sex” in Its South Asian Contexts},
+  year         = {2003},
+  publisher    = {University Of Chicago Press},
+  address      = {Chicago},
+  keywords     = {seclit}, 
 }
 
 @book{datta2015,
